1991-11-21  dickey@software.org

	* src/ded.c: make 'tag_opt' public

1991-11-21  ste_cm@software.org

	* src/ded.c: BASELINE Thu Nov 21 07:36:21 1991

1991-11-21  dickey@software.org

	* src/dedring.c: save/unsave tag_opt

1991-11-21  ste_cm@software.org

	* src/dedring.c: BASELINE Thu Nov 21 07:36:21 1991

1991-11-21  dickey@software.org

	* src/ded.h: make tag_opt public

1991-11-21  ste_cm@software.org

	* src/ded.h: BASELINE Thu Nov 21 07:36:21 1991

1991-11-12  dickey@software.org

	* src/dedline.c:
	corrected 'edittext()'; was not properly clearing buffer if
	I got a kill-character.

1991-11-12  ste_cm@software.org

	* src/dedline.c: BASELINE Tue Nov 12 12:14:11 1991

1991-11-12  dickey@software.org

	* test/traceback.sh: RCS_BASE

1991-11-12  ste_cm@software.org

	* test/traceback.sh: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

	* test/traceback.sh:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1991-11-12  Thomas E. Dickey  <dickey@software.org>

	* test/walkback.sh: RCS_BASE

1991-10-22  dickey@software.org

	* test/run_test.sh:
	made this test for batch-mode (cannot run then, because we have no /dev/tty)

1991-10-22  ste_cm@software.org

	* test/run_test.sh: BASELINE Tue Oct 22 12:22:42 1991

1991-10-21  ste_cm@software.org

	* src/ded.h:
	added an unused member at the beginning of FLIST (next) that
	is there to fool the optimizer of Apollo CC 6.7 into working
	properly.

1991-10-18  ste_cm@software.org

	* src/dedscan.c:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

	* src/dedscan.c: broke up logic in 'statLINE()' to avoid apollo cc 6.7 
	optimizer bug (it made the first arg on 'dedstat()' null).

1991-10-18  dickey@software.org

	* test/test2.cmd: filter file-group

1991-10-18  ste_cm@software.org

	* test/test2.cmd:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* test/edit_test.sh: do the same for owner (uid)

1991-10-18  ste_cm@software.org

	* test/edit_test.sh: